--- a/online-web/src/main/webapp/web/css/anchors_resources.css
+++ b/online-web/src/main/webapp/web/css/anchors_resources.css
@@ -1394,7 +1394,7 @@ outline: none;
 	white-space: nowrap;
 	text-overflow: ellipsis;
 	overflow: hidden;
-	border: 1px solid #ededed;
+	border: 1px solid #dedede;
 }
 .disciple-table-main table tr img{
 	width: 106px;
@@ -1710,7 +1710,7 @@ outline: none;
 	width: 95px;
 }
 .myself-disciple-list table th:nth-child(2){
-	width: 110px;
+	width: 120px;
 }
 .myself-disciple-list table th:nth-child(3){
 	width: 68px;
@@ -1731,7 +1731,7 @@ outline: none;
 	width: 94px;
 }
 .myself-disciple-list table th:nth-child(9){
-	width: 120px;
+	width: 110px;
 }
 .myself-disciple-list td span{
 	color: #188eee;
@@ -1764,6 +1764,7 @@ outline: none;
 	margin-top: 40px;
 	max-height: 500px;
 	overflow-y: auto;
+	padding-bottom: 20px;
 }
 .comment-see-modal{
 	clear: both;
@@ -1772,7 +1773,7 @@ outline: none;
 }
 .comment-see-modal span{
 	float: left;
-	width: 80px;
+	width: 110px;
 	text-align: right;
 	margin-right: 20px;
 }
@@ -1790,6 +1791,7 @@ outline: none;
 	border-radius: 4px;
 	color: white;
 	float: left;
+	outline: none;
 }
 
 .comment-see-modal .not-adopt-disciple{
@@ -1877,6 +1879,7 @@ font-size: 14px;
 display: -webkit-box;
 -webkit-box-orient: vertical;
 -webkit-line-clamp: 3;
+text-align: left;
 }
 .answer-list-table table .answer{
   width: 100%;
@@ -1887,12 +1890,22 @@ font-size: 14px;
 display: -webkit-box;
 -webkit-box-orient: vertical;
 -webkit-line-clamp: 3;
+text-align: left
 }
+
 .answer-list-table table .edit-question{
 	color: #188EEE;
 	cursor: pointer;
 }
-
+.comment-inherit-null{
+	width: 100%;
+	text-align: center;
+	color: #999999;
+	padding: 160px 0; 
+}
+.comment-inherit-null p{
+	margin-top: 20px
+}
 .answer-edit-replay{
 	position: fixed;
 	width: 960px;
@@ -1932,9 +1945,8 @@ display: -webkit-box;
 	color: #666666;
 	float: left;
 }
-.answer-edit-replay .querst-list p{
+.answer-edit-replay .querst-list .all-question-text{
 	display: block;
-	width: 69px;
 	width: 736px;
 	max-height: 180px;
 	overflow-y: auto;
@@ -1958,6 +1970,12 @@ display: -webkit-box;
 	border-radius: 4px;
 	color: white;
 	margin-bottom: 90px;
+}
+.querst-list .error-reply-null{
+	color: red;
+	float: left;
+    margin-left: 91px;
+    margin-top: 15px;
 }
 /*师承管理*/
 .namage-top{
