弟子选择 添加小手

--- a/online-web/src/main/webapp/web/css/anchors_resources.css
+++ b/online-web/src/main/webapp/web/css/anchors_resources.css
@@ -1578,6 +1578,7 @@ outline: none;
 .sava-pupil ul li .set-lable{
 	overflow: hidden;
 	width: fit-content;
+	cursor: pointer;
 	width: -webkit-fit-content;
 }
 .sava-pupil ul li p{
