--- a/wechat/src/main/webapp/xcview/css/physician/index.css
+++ b/wechat/src/main/webapp/xcview/css/physician/index.css
@@ -286,20 +286,21 @@ header{
 }
 .batch_main{
     float: left;
-    margin-left: 0.105rem;
-    margin-right: 0.105rem;
-}
+    margin-left: 0.065rem;
+    margin-right: 0.065rem;}
 .exothecium{
     width: 7.2rem;
     margin: 0 auto;
     /*background: red;*/
 }
 .batch_main_bg{
-    width: 2.19rem;
-    height: 3.1rem;
-    background-image: linear-gradient(-224deg, #9573F6 0%, #9099F8 100%);
-    box-shadow: 0 4px 4px 0 rgba(0,0,0,0.10);
+    width: 2.27rem;
+    height: 3.18rem;
+    /*background-image: linear-gradient(-224deg, #9573F6 0%, #9099F8 100%);*/
+    /*box-shadow: 0 4px 4px 0 rgba(0,0,0,0.10);*/
     border-radius: 16px;
+    background-size: 2.27rem 3.18rem;
+
 }
 .batch_main_img{
     padding-top: 0.52rem;
@@ -319,6 +320,9 @@ header{
     color: #FFFFFF;
     text-align: center;
     margin-bottom: 0.1rem;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
 }
 .batch_main_bg .center{
     width: 1.99rem;
@@ -326,6 +330,23 @@ header{
     font-size: 0.24rem;
     color: #FFFFFF;
     text-align: center;
+    display: -webkit-box;
+    -webkit-box-orient: vertical;
+    -webkit-line-clamp: 2;
+    overflow: hidden;
+}
+
+/*旋转360度*/
+.img:hover{
+    transition: All 0.4s ease-in-out;
+    -webkit-transition: All 0.4s ease-in-out;
+    -moz-transition: All 0.4s ease-in-out;
+    -o-transition: All 0.4s ease-in-out;
+    transform: rotate(360deg);
+            -webkit-transform: rotate(360deg);
+            -moz-transform: rotate(360deg);
+            -o-transform: rotate(360deg);
+            -ms-transform: rotate(360deg);
 }
 
 
