--- a/online-web/src/main/webapp/web/css/anchors_resources.css
+++ b/online-web/src/main/webapp/web/css/anchors_resources.css
@@ -1007,13 +1007,13 @@ outline: none;
     border: 1px solid #dedede;
 } 
 .long-range-table table th:nth-child(1) {
-    width: 216px;
+    width: 236px;
 } 
 .long-range-table table th:nth-child(2) {
     width: 103px;
 } 
 .long-range-table table th:nth-child(3) {
-    width: 324px;
+    width: 304px;
 } 
 .long-range-table table th:nth-child(4) {
     width: 96px;
@@ -1033,6 +1033,7 @@ outline: none;
 }
 .long-range-table table td span{
 	color: #188EEE;
+	cursor: pointer;
 }
 .long-range-table table td span:nth-child(1){
 	margin-left: 30px;
@@ -1101,6 +1102,15 @@ outline: none;
 	color: white;
 	border: 0;
 	outline: none;
+}
+.comment-establish .wrong-null{
+	    font-size: 14px;
+    color: #FF4012;
+    line-height: 30px;
+    text-indent: 20px;
+    background: url(/web/images/icons/tanhao.png) no-repeat left center;
+	margin-left: 99px;
+    margin-bottom: 0;
 }
 .appointment-details{
 	overflow: hidden;
@@ -2058,23 +2068,23 @@ white-space: normal;
 .namage-list-table table th:nth-child(3){
 	width: 79px;
 }
+.namage-list-table table th:nth-child(3){
+	width: 84px;
+}
 .namage-list-table table th:nth-child(4){
-	width: 65px;
+	width: 75px;
 }
 .namage-list-table table th:nth-child(5){
-	width: 65px;
-}
-.namage-list-table table th:nth-child(6){
 	width: 94px;
 }
-.namage-list-table table th:nth-child(7){
+.namage-list-table table th:nth-child(6){
 	width: 121px;
 }
-.namage-list-table table th:nth-child(8){
-	width: 61px;
+.namage-list-table table th:nth-child(7){
+	width: 81px;
 }
-.namage-list-table table th:nth-child(9){
-	width: 125px;
+.namage-list-table table th:nth-child(8){
+	width: 155px;
 }
 .namage-list-table table td{
 	height: 80px;
@@ -2194,7 +2204,7 @@ white-space: normal;
     color: #FF4012;
     line-height: 30px;
     text-indent: 20px;
-    background: url(../images/icons/tanhao.png) no-repeat left center;
+    background: url(/web/images/icons/tanhao.png) no-repeat left center;
     margin-left: 135px;
     margin-bottom: 0;
 }
