主播页课程标题新ui修改。课程已下架修改课程标题新ui

--- a/wechat/src/main/webapp/xcview/css/live_personal.css
+++ b/wechat/src/main/webapp/xcview/css/live_personal.css
@@ -426,10 +426,12 @@ color: #999999;
 	left: 0.1rem;
 }
 .wrap_vedio_btn li .speak_text{
-	    overflow: hidden;
-    text-overflow: ellipsis;
-    white-space: nowrap;
-        padding: 0.16rem 0 0 0;
+	height: 0.76rem;
+    padding: 0.16rem 0 0 0;
+    display: -webkit-box;
+	-webkit-box-orient: vertical;
+	-webkit-line-clamp: 2;
+	overflow: hidden;
 
 }
 .wrap_vedio_btn li .speak_name{
