提问页-提交后跳转上一页。地址demo测试。在线弟子修改文字。

--- a/wechat/src/main/webapp/xcview/css/feedback.css
+++ b/wechat/src/main/webapp/xcview/css/feedback.css
@@ -89,6 +89,7 @@ header {
     margin-top: 1.08rem;
     background: #fff;
     background-color: white;
+    padding: 0.2rem 0;
 }
 textarea{
 	width: 7.1rem !important;
