--- a/online-web/src/main/webapp/web/css/anchors_resources.css
+++ b/online-web/src/main/webapp/web/css/anchors_resources.css
@@ -1766,7 +1766,7 @@ outline: none;
 .myself-disciple-list table .disciple-source{
 	width: 89px;
     overflow: hidden;
-    height: 40px;
+    max-height: 40px;
     line-height: 20px;
     font-size: 14px;
     display: -webkit-box;
@@ -1918,7 +1918,7 @@ white-space: nowrap;
 .answer-list-table table .question{
 	  width: 100%;
 overflow: hidden;
-height: 60px;
+max-height: 60px;
 line-height: 20px;
 font-size: 14px;
 display: -webkit-box;
@@ -1930,7 +1930,7 @@ white-space: normal;
 .answer-list-table table .answer{
   width: 100%;
 overflow: hidden;
-height: 60px;
+max-height: 60px;
 line-height: 20px;
 font-size: 14px;
 display: -webkit-box;
