--- a/wechat/src/main/webapp/xcview/css/physician/index.css
+++ b/wechat/src/main/webapp/xcview/css/physician/index.css
@@ -333,6 +333,8 @@ header{
     margin-bottom: 0.2rem;
 }
 .batch_main_bg .name{
+    width: 2.2rem;
+    margin: 0 auto;
     font-size: 0.28rem;
     color: #FFFFFF;
     text-align: center;
