中医师 主页-搜索-文字过多做限制。。详情页，点击师承显示内容。学堂、中医师-搜索页--增加返回按钮和搜索按钮

--- a/wechat/src/main/webapp/xcview/css/physician/index.css
+++ b/wechat/src/main/webapp/xcview/css/physician/index.css
@@ -368,4 +368,17 @@ header{
             -ms-transform: rotate(360deg);
 }
 
+.header_seek_main img{
+    float: left;
+    margin-left: 0.2rem;
+    margin-right: 0;
+}
+.header_seek_main_span{
+    display: inline-block;
+    float: left;
+    width: 6.2rem;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+}
 
