--- a/wechat/src/main/webapp/xcview/css/physician/physicians_page.css
+++ b/wechat/src/main/webapp/xcview/css/physician/physicians_page.css
@@ -2265,6 +2265,7 @@ margin-top: 0.015rem;
 .prose_origin{
 	width: 7.5rem;
 	height: 100%;
+	display: none;
 	/*height: 3rem;*/
 	/*background: red;*/
 }
