--- a/wechat/src/main/webapp/xcview/css/search.css
+++ b/wechat/src/main/webapp/xcview/css/search.css
@@ -45,12 +45,17 @@ header{
 }
 .header_seek_main{
 	position: absolute;
-	top: 0;
-	left: 0.68rem;
-	font-size: 0.26rem;
-	/*font-size: 0.636rem;*/
-	color: #999999;
-	pointer-events: none;
+    top: 0;
+    left: 0.68rem;
+    font-size: 0.26rem;
+    /* font-size: 0.636rem; */
+    color: #999999;
+    pointer-events: none;
+    float: left;
+    width: 5rem;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
 }
 .header_seek .span{
     width: 0.7rem;
