--- a/online-web/src/main/webapp/web/css/anchors_resources.css
+++ b/online-web/src/main/webapp/web/css/anchors_resources.css
@@ -2938,8 +2938,30 @@ white-space: normal;
 	cursor: pointer;
 	outline: none;
 }
-
-
+.column-picter .column-reset-tip{
+	    position: absolute;
+    width: 100%;
+    height: 60px;
+    left: 0;
+    bottom: 0;
+    background: rgba(0,0,0,.3);
+    color: white;
+    text-align: center;
+    line-height: 60px;
+    margin: 0;
+}
+.media-picter .media-reset-tip{
+	    position: absolute;
+    width: 100%;
+    height: 60px;
+    left: 0;
+    bottom: 0;
+    background: rgba(0,0,0,.3);
+    color: white;
+    text-align: center;
+    line-height: 60px;
+    margin: 0;
+}
 
 
 /*防止继承样式*/
