--- a/online-web/src/main/webapp/web/css/anchor/curriculum.css
+++ b/online-web/src/main/webapp/web/css/anchor/curriculum.css
@@ -1377,7 +1377,18 @@ width: 63px;
     margin-right: 25px;
     background: #F0F0F0;
 }
-
+#courseImg .cuorse-reset-tip {
+    position: absolute;
+    width: 100%;
+    height: 60px;
+    left: 0;
+    bottom: 0;
+    background: rgba(0,0,0,.3);
+    color: white;
+    text-align: center;
+    line-height: 60px;
+    margin: 0;
+}
 
 
 
