--- a/wechat/src/main/webapp/xcview/css/physician/physicians_page.css
+++ b/wechat/src/main/webapp/xcview/css/physician/physicians_page.css
@@ -12,7 +12,10 @@ a{
 	text-decoration: none;
 }
 .body{
-	position: fixed;
+    position: fixed;
+    width: 7.5rem;
+    left: 50%;
+    margin-left: -3.75rem;
 }
 .both{
 	clear: both;
@@ -45,6 +48,9 @@ p{
     top: 0px;
     color: #000;
     z-index: 999999;
+    left: 50%;
+    /*background: red;*/
+    margin-left: -3.75rem;
 }
 .header {
     width: 7.5rem;
@@ -211,6 +217,7 @@ p{
     width: 7.5rem;
     background-color: white;
     z-index: 999999;
+    margin: 0 auto;
     border-bottom: 1px solid #F0F0F0;
     /*position: relative;*/
 }
@@ -299,6 +306,8 @@ p{
 	opacity: 0.2;
 	position: fixed;
 	z-index: 9999991;
+	/*display: none;*/
+	opacity: 0;
 }
 .screen_show_main{
 	width: 7.5rem;
@@ -1773,6 +1782,8 @@ p{
 /*介绍开始*/
 .message_referral{
 	display: none;
+	width: 7.5rem;
+	margin: 0 auto;
 }
 
 .message_referral_main{
@@ -2264,10 +2275,11 @@ margin-top: 0.015rem;
 /*师承开始*/
 .prose_origin{
 	width: 7.5rem;
-	height: 100%;
+	/*height: 100%;*/
 	display: none;
 	/*height: 3rem;*/
 	/*background: red;*/
+	margin: 0 auto;
 }
 .prose_origin_main{
 
