--- a/wechat/src/main/webapp/xcview/css/physician/quiz.css
+++ b/wechat/src/main/webapp/xcview/css/physician/quiz.css
@@ -111,6 +111,63 @@ textarea{
     opacity: 0.3;
 }
 
+.prosperity_popout {
+    width: 7.5rem;
+    height: 100%;
+    display: none;
+
+}
+.prosperity_popout_bg {
+    width: 7.5rem;
+    height: 100%;
+    position: fixed;
+    top: 0;
+    left: 50%;
+    z-index: 999999;
+    background: #000;
+    opacity: 0.3;
+    margin-left: -3.75rem;
+}
+.prosperity_popout_main {
+    width: 5.4rem;
+    height: 3.78rem;
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    margin-top: -1.89rem;
+    margin-left: -2.7rem;
+    background: #fff;
+    border-radius: 16px;
+    z-index: 999999;
+}
+.prosperity_popout_title {
+    width: 2.2rem;
+    height: 0.6rem;
+    line-height: 0.6rem;
+    font-size: 0.32rem;
+    color: #333333;
+    margin: 0 auto;
+    margin-top: 0.6rem;
+    margin-bottom: 0.3rem;
+    text-align: center;
+}
+.prosperity_cen {
+    width: 4.8rem;
+    font-size: 0.28rem;
+    color: #333333;
+    text-align: center;
+    margin: 0 auto;
+    margin-bottom: 0.6rem;
+}
+.prosperity_popout_hide {
+    width: 100%;
+    height: 0.87rem;
+    line-height: 0.87rem;
+    border-top: 1px solid #f0f0f0;
+    font-size: 0.3rem;
+    color: #00BC12;
+    text-align: center;
+}
 
 
 /*中间内容结束*/
