提问修改跳转

--- a/wechat/src/main/webapp/xcview/css/physician/my_bookings.css
+++ b/wechat/src/main/webapp/xcview/css/physician/my_bookings.css
@@ -81,6 +81,7 @@ header{
     width: 7.5rem;
     height: 100%;
     margin: 0 auto;
+    margin-top: 0.88rem;
 }
 .booking_person{
     width: 6.98rem;
