--- a/online-web/src/main/webapp/web/css/anchors_resources.css
+++ b/online-web/src/main/webapp/web/css/anchors_resources.css
@@ -1360,6 +1360,14 @@ outline: none;
 	padding: 20px;
 	overflow: hidden;
 }
+.disciple-tip-operate{
+	color: #999999;
+	font-size: 15px;
+	margin-bottom: 18px;
+}
+.disciple-tip-operate span{
+	color: #F97B49;
+}
 .disciple-search-main{
 	margin-bottom: 20px;
 	overflow: hidden;
